# grb-simulations

./: .gitignore  README.md  download_gbm_data.py  gbm_to_megalib.py  pyproject.toml  run_cosima.py  run_mimrec.py  run_revan.py  sample_source_file_generation.py  source_file_generation.py  trigger_algorithm_list_generation.py
MEGAlib_source_inputs/grbs/: .gitignore
cosiburstpy/: __init__.py  _version.py  cli.py
cosiburstpy/event/: __init__.py  event.py  lightcurve.py  position.py  source_file.py  spectral_models.py  spectrum.py
cosiburstpy/fermigbm/: __init__.py  create_lightcurve.py  data_download.py
cosiburstpy/gbm/: __init__.py  create_lightcurve.py  data_download.py  define_spectrum.py
cosiburstpy/megalib/: __init__.py  load_megalib.py  read_sim_file.py  run_megalib.py
cosiburstpy/simulations/: __init__.py  acs_data.py  acs_trigger_data.py  event_table.py  spacecraft_orientation.py
cosiburstpy/utility/: __init__.py  plotting.py  utility.py
discover_scripts/: download_gbm_data.sh
example_scripts/: README.md  download_gbm_data.py  gbm_to_megalib.py  run_cosima.py  run_mimrec.py  run_revan.py  source_file_generation.py  trigger_algorithm_list_generation.py
example_yaml_files/: README.md  example-band_spectrum.yaml  example_revan.yaml  example_source_file.yaml  example_trigger_algorithm.yaml
examples/: README.md  example-band_spectrum.yaml  example-brokenpowerlaw_spectrum.yaml  example-comptonized_spectrum.yaml  example-mono_spectrum.yaml  example-powerlaw_spectrum.yaml  example.yaml  example_download.yaml  example_gbm_to_megalib.yaml  example_mimrec.yaml  example_revan.yaml  example_source_file.yaml  example_trigger_algorithm.yaml
grb_simulator/: __init__.py  config.py  download_gbm_data.py  event.py  gbm_to_megalib_inputs.py  load_megalib.py  model.py  run_megalib.py  source_files.py  trigger_algorithm_inputs.py
input_files/: sgrbs.yaml  trigger_algorithm_sgrbs.yaml
(+581 files in other folders)
