[project]
name = "cosiburstpy"
version = "0.1.0"
description = "Facilitate producing large samples of COSI transient simulations."
readme = "README.md"
authors = [
    { name = "Eliza Neights", email = "eliza.neights@gmail.com" }
]
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "astropy",
    "scoords",
    "scipy",
    "matplotlib",
    "pandas",
    "h5py"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"