[project]
name = "cosiburstpy"
dynamic = ["version"]
description = "Produce population-level COSI transient simulations."
readme = "README.md"
authors = [{name = "Eliza Neights", email = "eliza.neights@gmail.com"}]
requires-python = ">=3.8"
dependencies = ["numpy",
                "astropy",
                "scoords",
                "scipy",
                "matplotlib",
                "pandas",
                "h5py"]
[project.optional-dependencies]
fermi-gbm = ["gdt",
             "astro-gdt-fermi"]

[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "cosiburstpy/_version.py"

[project.scripts]
cosiburstpy = "cosiburstpy.cli:main"
